@@ -26,7 +26,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * A representation of a schedule.
@@ -110,7 +109,7 @@ public class Schedule
 
             this.virtualNodeStates = vnodeRepairStates.getVnodeRepairStates().stream()
                     .map(vrs -> VirtualNodeState.convert(vrs, repairedAfter))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
